improve league performance